// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationItem /> Should render correctly 1`] = `
<div>
  <a
    class="article-card"
    href="/test"
    role="button"
    style="text-decoration: none;"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
        style="background-image: url(null);"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="article-card__outer-container article-card__outer-container--auto"
        >
          <div
            class="article-card__date"
          >
            <div
              class="typography__main typography__link typography--no-padding"
            />
            <div
              class="typography__main typography__link typography--no-padding"
            />
          </div>
          <div
            class="article-card__center-container"
          >
            <div
              class="typography__main typography--no-padding article-card__title"
            />
            <div
              class="article-card__children"
            />
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </div>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    class="article-card"
    href="https://duckduckgo.com/"
    role="button"
    style="text-decoration: none;"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
        style="background-image: url(null);"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="article-card__outer-container article-card__outer-container--auto"
        >
          <div
            class="article-card__date"
          >
            <div
              class="typography__main typography__link typography--no-padding"
            />
            <div
              class="typography__main typography__link typography--no-padding"
            />
          </div>
          <div
            class="article-card__center-container"
          >
            <div
              class="typography__main typography--no-padding article-card__title"
            />
            <div
              class="article-card__children"
            />
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </div>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly with custom className 1`] = `
<div>
  <a
    class="article-card test-custom-classname"
    href="/test"
    role="button"
    style="text-decoration: none;"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
        style="background-image: url(null);"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="article-card__outer-container article-card__outer-container--auto"
        >
          <div
            class="article-card__date"
          >
            <div
              class="typography__main typography__link typography--no-padding"
            />
            <div
              class="typography__main typography__link typography--no-padding"
            />
          </div>
          <div
            class="article-card__center-container"
          >
            <div
              class="typography__main typography--no-padding article-card__title"
            />
            <div
              class="article-card__children"
            />
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </div>
  </a>
</div>
`;
